--- a/app/views/imageDetails1.xml
+++ b/app/views/imageDetails1.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window id="window" layout="vertical">
+	<Window id="window" layout="vertical" onClose="cleanup">
 		<ImageView id="image0" height="33%"></ImageView>
 		<ImageView id="image1" height="33%"></ImageView>
 		<ImageView id="image2" height="33%"></ImageView>
